2013-01-02  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (main) Remove redundant code.

2013-01-02  Werner Lemberg  <wl@gnu.org>

	[ftview] Redesign layout.

	It now displays all options, not only the changes, in a structured
	way.

	* src/ftview.c (START_X, START_Y): New macros.
	(INIT_SIZE): Use them.
	(status): Remove `header' and `header_buffer' members.
	(Render_Waterfall): Use START_X and START_Y.
	(event_gamma_change, event_bold_change, event_radius_change,
	event_slant_change, event_render_mode_change, Process_Event): Don't
	set `status.header'.
	(write_header): Display all options.

	(main): Updated.

2012-12-31  Werner Lemberg  <wl@gnu.org>

	Introduce a warn color.

	* src/ftcommon.h (FTDemo_Display): Add `warn_color' member.

	* src/ftcommon.c (FTDemo_Display_New): Initialize it.

2012-12-31  Werner Lemberg  <wl@gnu.org>

	* src/ftdiff.c (render_state_draw, main): Use HEADER_HEIGHT.

2012-12-27  Werner Lemberg  <wl@gnu.org>

	Increase header line distances.

	* src/ftgrid.c, src/ftview.c (HEADER_HEIGHT): Move to...
	* src/ftcommon.h: ... this file.  Set it to value 12.

2012-12-27  Werner Lemberg  <wl@gnu.org>

	* Makefile: Add dependencies on `ftcommon.h'.

2012-12-26  Werner Lemberg  <wl@gnu.org>

	Implement -w and -h options to specify window width and height.

	* src/ftcommon.c (FTDemo_Display_New): Two new parameters to pass
	width and height.
	(DIM_X, DIM_Y): Moved to ...
	* src/ftcommon.h: ... this.

	* src/ftdiff.c (usage): Updated.
	(ADisplayRec): Add `width' and `height' elements.
	(adisplay_init): Two new parameters to pass width and height.
	(write_message): Updated.
	(main): Handle `-w' and `-h' options.

	* src/ftgamma.c (DIM_X, DIM_Y): Removed.

	* src/ftgrid.c (GridStatusRec): Add `width' and `height' elements.
	(grid_status_init): Updated.
	(usage): Updated.
	(parse_cmdline): Handle `-w' and `-h' options.
	(main): Updatd.

	* src/ftmulti.c (DIM_X, DIM_Y): Use the same (new) values as in
	other demo programs.